[package]
name = "dynamic_ocl"
description = "Dynamically-loaded OpenCL bindings"
version = "0.1.0-alpha.1"
authors = ["Dana Marcuse <dana@marcuse.us>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/dmarcuse/dynamic_ocl"
repository = "https://github.com/dmarcuse/dynamic_ocl"
keywords = [ "opencl", "ocl", "gpu", "gpgpu", "compute" ]
categories = [ "api-bindings", "concurrency", "external-ffi-bindings", "hardware-support", "science" ]
license = "Apache-2.0"

[dependencies]
libc = "0.2.66"
dlopen = "0.1.8"
thiserror = { version = "1.0.9", optional = true }
lazy_static = "1.4.0"
const-cstr = "0.3.0"
generic-array = { version = "0.13.2", optional = true }
log = { version = "0.4.8", optional = true }
tynm = { version = "0.1.1", optional = true }

[features]
safe = [ "thiserror", "generic-array", "log", "tynm" ]
default = [ "safe" ]
